<resources>
    <string name="app_name">KFMCApp</string>
    <string name="SignIn">تسجيل الدخول</string>
    <string name="Email">البريد الإلكتروني</string>
    <string name="Password">كلمة المرور</string>
    <string name="SignUp">تسجيل</string>
    <string name="HaveAccount">لديك حساب من قبل؟</string>
    <string name="DntHaveAccount"> مستخدم جديد؟</string>
    <string name="SignInPrompt">قم بتسجيل الدخول</string>
    <string name="SignUpPrompt">سجل الان</string>
    <string name="ForgetPassowrd">هل نسيت كلمة المرور؟</string>
    <string name="CreateNewAccount">انشاء حساب جديد</string>
    <string name="FirstName">الاسم الاول</string>
    <string name="lastName">الاسم الاخير</string>
    <string name="Gender">الجنس: </string>
    <string name="male">ذكر </string>
    <string name="female">انثى</string>
    <string name="password">كلمة المرور</string>
    <string name="passwordConfirmation">تأكيد كلمة المرور</string>
    <string name="birthday">بيرثداي</string>
    <string name="RequiredFeild"> حقل مطلوب!  </string>
    <string name="PasswordLength">خطأ! كلمة المرور يجب ان لاتقل عن ثمانية أحرف أو أرقام </string>
    <string name="NameLength">خطأ! الاسم يجب ان لايقل عن ثلاثة أحرف </string>
    <string name="NotMatch">كلمة المرور غير متطابقة </string>
    <string name="VerificationEmail"> تم إرسال بريد للتحقق، قم بإكمال الخطوات لتفعيل التسجيل </string>
    <string name="RegisterationError"> خطأ، الرجاء التأكد من البيانات المدخلة </string>
    <string name="delete">حذف</string>
    <string name="AlreadyRegistered">البريد الالكتروني مسجل مسبقا</string>
    <string name="deleteConfirm">هل أنت متأكد من حذف جميع الحقول؟</string>
    <string name="deleteConfirmTitle">تنبيه!</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="cancel">إلغاء</string>
    <string name="create">انشاء</string>
    <string name="Register">تسجيل</string>
    <string name="EnterEmail"> مطلوب! الرجاء ادخال بريد الكتروني </string>
    <string name="EnterPassword">مطلوب! الرجاء ادخال كلمة المرور </string>
    <string name="AuthenticationFailed">خطأ! الرجاء التأكد من صحة البيانات المدخلة </string>
    <string name="Success">تم بنجاح</string>
    <string name="AddedSuccessfully">تمت الإضافة بنجاح</string>
    <string name="basicInfo">البيانات الأساسية</string>
    <string name="profile">الملف الشخصي</string>
    <string name="resetPassword">إعادة ضبط كلمة المرور</string>
    <string name="resetPasswordTitle">أدخل بريدك الالكتروني وسنقوم بإرسال بريد الكتروني لإعادة ضبط كلمة المرور</string>
    <string name="submit">إرسال</string>
    <string name="email_fill">البريد الالكتروني</string>
    <string name="edit_personal_info">تعديل</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="personalInfo">الملف الشخصي</string>
    <string name="update">تعديل</string>
    <string name="WelcomeUser">مرحبا %1$s.</string>
    <string name="Welcome">أهلا بك...</string>
    <string name="phone">رقم الجوال </string>

    <string name="menu_home">الرئيسية</string>
    <string name="menu_logout">تسجيل الخروج</string>
    <string name="menu_trainingRequest">طلبات التدريب</string>
    <string name="menu_approvedRequest">الطلبات المقبولة</string>


    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="menu_MyTrainingRequest">طلباتي</string>
    <string name="menu_TrainingRequests">طلبات التدريب</string>
    <string name="menu_applyForTrainingRequest">تقديم طلب تدريب</string>
    <string name="menu_myTrainingRequestStatus">متابعة طلب التدريب</string>
    <string name="menu_cardIssue">طلب بطاقة </string>
    <string name="menu_profile">الملف الشخصي </string>
    <string name="kfmc">التجمع الطبي الثاني</string>
</resources>