<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_home"/>


    <item
        android:id="@+id/nav_trainingRequest"
        android:title="@string/menu_TrainingRequests">

        <menu>
            <item
                android:id="@+id/nav_applyForTrainingRequest"
                android:title="@string/menu_applyForTrainingRequest" />
            <item
                android:id="@+id/nav_myTrainingRequestStatus"
                android:title="@string/menu_myTrainingRequestStatus" />
        </menu>
    </item>


    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout" />

</menu>
