<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".Registration">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

//TODO: scroll view size

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:orientation="vertical"
        android:paddingRight="12dp">

        <TextView
            style="@style/font1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/CreateNewAccount"
            android:textColor="#3f4658"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:ems="10"
            android:hint="@string/FirstName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:ems="10"
            android:hint="@string/passwordConfirmation"
            android:inputType="textPassword" />

        <TextView
            style="@style/font1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordConfirmation"

            android:layout_gravity="right"
            android:text="@string/Gender" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginRight="25dp"
                android:layoutDirection="rtl"
                android:text="@string/male"
                android:textAlignment="textStart"
                />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/female"
                android:checked="true"
                android:textAlignment="textStart" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="10dp"
            >

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/red"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/Green"
                android:text="@string/Register"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
</ScrollView>