<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginrl"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="33dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="14dp"
        android:orientation="vertical"
        android:paddingRight="12dp">

        <TextView
            style="@style/heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SignIn" />


        <EditText
            android:id="@+id/EmailTxt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:ems="10"
            android:hint="@string/Email" />

        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgetPasswprdtxt"
            style="@style/font1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:text="@string/ForgetPassowrd"
            android:textColor="#3f4658"
            android:textColorLink="@color/teal_200"
            android:textSize="14dp" />

        <Button
            android:id="@+id/LogInbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/SignIn"
            android:textColor="#ffff"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signUpPrompttxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignUpPrompt"
                android:textSize="16sp" />

            <TextView
                style="@style/font1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/DntHaveAccount"
                android:textSize="16dp"></TextView>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>